# handposeutils

./: .editorconfig  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
calculations/: distances.py  embeddings.py  geometry.py  similarity.py  transforms.py
data/: coordinate.py  data_reader.py  handpose.py  handpose_sequence.py
docs/: conf.py  handposeutils.calculations.rst  index.rst  modules.rst  tst.py
embeddings/: vector.py
handposeutils/calculations/: geometry.py
handposeutils/data/: __init__.py
tests/calculations_tests/: geometry_tests.py  similarity_test.py  transforms_test.py
tests/calculations_tests/poses/: sequence_counting.json
tests/data_tests/: data_reader_test.py  record_handpose.py  record_handpose_sequence.py  sample.bvh  sample_21_joints.bvh  save_json_from_handpose_live.py  save_json_sequence_from_handpose_live.py  write_to_c3d.py
tests/embeddings_tests/: clustering_test.py  embedding_similarity_test.py  temporal_embeddings_test.py
tests/embeddings_tests/poses/: shocker.json
tests/visualization_tests/: deprecated_visualizer_test.py  new_visualizer_sequence_test.py  new_visualizer_test.py  new_visualizer_test_live.py  visualize_pose_differences.py  visualizer_test.py
tests/visualization_tests/poses/: rock_on.json
visualization/: __init__.py  visualized_pose.py  visualizer.py
